--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,5 @@
 
 body {
   margin: 0;
-  width: 100vw;
+  width: 100%;
 }
